--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "netlify-cli": "^2.30.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-rebound": "^0.8.3",
     "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false gireact-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
