--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
     "create-react-app": "^3.3.0",
+    "dotenv": "^8.2.0",
     "material-icons-react": "^1.0.4",
     "netlify-cli": "^2.30.0",
     "react": "^16.12.0",
